Todo:
- Mouse wheel over the palette colors should switch banks.
- Add mouse wheel support to horizontal sliders.
- Create menu like in the original. (Not the same items.)
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.06
- Moved the vertical slider's mouse wheel event to the vcc_SliderLogic unit, where it belongs.

2023.03.06
- You can change the vertical slider with mouse wheel.
- The vertical slider in PaletteEditor switches banks.
- Using the mouse wheel over the PaletteEditor no longer zooms DrawArea.

2023.03.03
- CreateRelease.bat added.
- KeyMapping is saved back to INI file.
- When in PaletteEditor, right clicking on DrawArea exits PaletteEditor.
- Added a vertical slider to PaletteEditor, it will switch the palette banks. (Not yet doing it.)

2023.03.02
- Added sliders to PaletteEditor. They are not changing anything yet.
- Sliders now change the currently selected colors RGB channels.
- When invoking PaletteEditor, the sliders are set to the selected color's RGB values.
- Clicking on the colors on the PaletteEditor changes the current color and sets
  the sliders accordingly.
- After invoking PaletteEditor, clicking on the draw area selects current color.

2023.03.01
- Removed string data part from Messaging subsystem.

2023.02.28
- New tool: PickColor (PICKCOL). When activated, click anywhere on the draw area
  to pick a color. That color is put on the MessageQueue in a MSG_PICKEDCOLOR message.
- Right clicking on ColorSelector invokes PICKCOL, and the picked color
  is put into the selected slot.
- The picked colors are saved in INI file.
- Middle click on ColorSelector to invoke PaletteEditor.
- The currently "picked" color slot is highlighted with VibroColors.
- FIX: Clicking the thin line beetween the key color and the other colors
  no longer invokes color picking for the selected color.
- Pressing F1 changes the ActiveColorIndex to the color under the cursor.