@@ -20,9 +20,9 @@ PutCEL=53
 GetColor=58
 
 [DrawArea]
-Zoom=2
-ZoomLeft=-143
-ZoomTop=-34
+Zoom=3
+ZoomLeft=-9
+ZoomTop=36
 
 [BasicControls]
 Tool0=DRAW
@@ -57,5 +57,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
-ActiveColor=9
+ActiveColor=6
 
