@@ -8,6 +8,7 @@ Todo:
 
 2023.03.06
 - Moved the vertical slider's mouse wheel event to the vcc_SliderLogic unit, where it belongs.
+- Added wheel event to the horizontal slider too.
 
 2023.03.06
 - You can change the vertical slider with mouse wheel.
